#737: update capabilities sent to browserstack to allow CDP / BiDi and video download